修改注解框架

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost/b2b
-jdbc.username=mysql
+jdbc.username=root
 jdbc.password=mysql
 jdbc.auto=none
 jdbc.showSql=true
