--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,6 @@
     </filter-mapping>
 	
 	<welcome-file-list>
-		<welcome-file>pages/login/login.jsp</welcome-file>
+		<welcome-file>pages/index.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
