--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,17 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	
+	<filter>
+		<filter-name>sessionTimeoutFilter</filter-name>
+		<filter-class>cn.com.bonde.b2b.website.filter.SessionTimeoutFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>sessionTimeoutFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<session-config>
+		<session-timeout>60</session-timeout>
+	</session-config>
 	<context-param>   
        <param-name>log4jConfigLocation</param-name>   
        <param-value>classpath:log4j.properties</param-value>   
@@ -36,6 +47,6 @@
     </filter-mapping>
 	
 	<welcome-file-list>
-		<welcome-file>pages/index.jsp</welcome-file>
+		<welcome-file>/pages/login.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
