--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Create three appenders, one called stdout and the other called rolling
-log4j.rootLogger=info,stdout,rolling,errorlog
+log4j.rootLogger=info,rolling,errorlog
 
 #控制台日志
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
