--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -55,6 +55,6 @@
     </filter-mapping>
 	
 	<welcome-file-list>
-		<welcome-file>/pages/index.jsp</welcome-file>
+		<welcome-file>/pages/welcome.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
