--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>sessionTimeoutFilter</filter-name>
-		<url-pattern>*.do</url-pattern>
+		<url-pattern>*.action</url-pattern>
 	</filter-mapping>
 	<session-config>
 		<session-timeout>60</session-timeout>
