--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>sessionTimeoutFilter</filter-name>
-		<url-pattern>*.do</url-pattern>
+		<url-pattern>*.action</url-pattern>
 	</filter-mapping>
 	<session-config>
 		<session-timeout>60</session-timeout>
@@ -16,6 +16,15 @@
        <param-name>log4jConfigLocation</param-name>   
        <param-value>classpath:log4j.properties</param-value>   
     </context-param>
+    
+    <filter>
+     <filter-name>HtmlEscapeFilter</filter-name>
+     <filter-class>cn.com.bonde.b2b.website.filter.HtmlEscapeFilter</filter-class>
+   </filter>
+    <filter-mapping>
+     <filter-name>HtmlEscapeFilter</filter-name>
+     <url-pattern>*.do</url-pattern>
+    </filter-mapping>
     
     <listener>  
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>  
@@ -46,6 +55,6 @@
     </filter-mapping>
 	
 	<welcome-file-list>
-		<welcome-file>/pages/index.jsp</welcome-file>
+		<welcome-file>/pages/welcome.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
