--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,7 +2,7 @@ hibernate.dialect=org.hibernate.dialect.MySQLDialect
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost/b2b
 jdbc.username=root
-jdbc.password=root
+jdbc.password=
 jdbc.auto=none
 jdbc.showSql=true
 jdbc.formatSql=true
