修改订单生成

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,8 @@
 # Create three appenders, one called stdout and the other called rolling
-log4j.rootLogger=info,stdout,rolling
-log4j.logger.cn.com.bonde=debug,stdout,rolling
+log4j.rootLogger=info,rolling
+log4j.logger.cn.com.bonde=debug,rolling
 log4j.additivity.cn.com.bonde=false
-log4j.logger.org.hibernate=debug,stdout,rolling
+log4j.logger.org.hibernate=debug,rolling
 log4j.additivity.org.hibernate=false
 
 #控制台日志
