--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cn.com.bonde.b2b</groupId>
 	<artifactId>website</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>war</packaging>
 	<name>WebSite</name>
 
@@ -107,7 +107,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.3</version>
+			<version>2.2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -148,7 +148,7 @@
 
 	<build>
 		<defaultGoal>clean package</defaultGoal>
-		<finalName>WebSite</finalName>
+		<finalName>clmb</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
