--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,8 +2,9 @@
 log4j.rootLogger=info,rolling
 log4j.logger.cn.com.bonde=debug,rolling
 log4j.additivity.cn.com.bonde=false
-log4j.logger.org.hibernate=debug,rolling
+log4j.logger.org.hibernate=info,rolling
 log4j.additivity.org.hibernate=false
+
 
 #控制台日志
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
