--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,8 +1,8 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost/b2b
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://b2b4climb.mysql.rds.aliyuncs.com
+jdbc.username=b2b
+jdbc.password=123456
 jdbc.auto=none
 jdbc.showSql=true
 jdbc.formatSql=true
