--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,12 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+	
+	<context-param>   
+       <param-name>log4jConfigLocation</param-name>   
+       <param-value>classpath:log4j.properties</param-value>   
+    </context-param>
+    
 	<filter>
 		<filter-name>sessionTimeoutFilter</filter-name>
 		<filter-class>cn.com.bonde.b2b.website.filter.SessionTimeoutFilter</filter-class>
@@ -12,10 +18,23 @@
 	<session-config>
 		<session-timeout>60</session-timeout>
 	</session-config>
-	<context-param>   
-       <param-name>log4jConfigLocation</param-name>   
-       <param-value>classpath:log4j.properties</param-value>   
-    </context-param>
+	
+	<filter>
+        <filter-name>characterEncodingFilter</filter-name>
+        <filter-class>cn.com.bonde.b2b.website.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+      <filter-name>characterEncodingFilter</filter-name>
+      <url-pattern>*.do</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+      <filter-name>characterEncodingFilter</filter-name>
+      <url-pattern>*.action</url-pattern>
+    </filter-mapping>
     
     <filter>
      <filter-name>HtmlEscapeFilter</filter-name>
